# lifehash-cli

./: .gitignore  .gitmodules  CLA.md  Makefile  Makefile.in  README.md  build.sh  config.h  config.h.in  configure  configure.ac  make-examples.sh  tasks.sh
.github/workflows/: ci.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc  CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.md
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  lifehash-cli.cron.d.ex  lifehash-cli.doc-base.ex  lifehash-cli.substvars  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/patches/: series  use-bash.diff
debian/source/: include-binaries  options
debian/upstream/: metadata.ex
src/: Makefile  Makefile.in  build_deps.sh  lifehash.cpp  png-writer.hpp
